--- a/main.css
+++ b/main.css
@@ -1,6 +1,10 @@
-* {
-    margin: 0;
-    padding: 0;
+html, body {
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 .grid div:nth-child(even){
